Fix access transformer

--- a/src/main/resources/xanax_at.cfg
+++ b/src/main/resources/xanax_at.cfg
@@ -1,2 +1,3 @@
 public net.minecraft.network.play.server.SPacketEntityVelocity *
 public net.minecraft.network.play.server.SPacketExplosion *
+public net.minecraft.client.Minecraft *
