--- a/src/main/resources/xanax_at.cfg
+++ b/src/main/resources/xanax_at.cfg
@@ -1,3 +1,4 @@
 public net.minecraft.network.play.server.SPacketEntityVelocity *
 public net.minecraft.network.play.server.SPacketExplosion *
 public net.minecraft.client.Minecraft *
+public net.minecraft.client.renderer.ItemRenderer *
