--- a/src/main/resources/xanax_at.cfg
+++ b/src/main/resources/xanax_at.cfg
@@ -1,4 +1,4 @@
 public net.minecraft.network.play.server.SPacketEntityVelocity *
 public net.minecraft.network.play.server.SPacketExplosion *
-public net.minecraft.client.Minecraft *
+public-f net.minecraft.client.Minecraft *
 public net.minecraft.client.renderer.ItemRenderer *
