--- a/src/main/resources/xanax_at.cfg
+++ b/src/main/resources/xanax_at.cfg
@@ -3,3 +3,4 @@ public net.minecraft.network.play.server.SPacketExplosion *
 public-f net.minecraft.client.Minecraft *
 public net.minecraft.client.renderer.ItemRenderer *
 public net.minecraft.util.Timer *
+public net.minecraft.network.play.server.SPacketPlayerPosLook *
